--- a/style.css
+++ b/style.css
@@ -15,13 +15,13 @@ body {
     min-width: 100%;
     min-height: 100vh;
     background-color: #c6d6e8;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow-x: hidden;
 }
 
 .container {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
     min-width: 95%;
     min-height: 95vh;
     background-color: #e5ffff;
@@ -254,7 +254,7 @@ aside {
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(100%, -50%);
+    transform: translate(150%, -50%);
     background-color: rgba(197, 245, 197, 0.5);
     z-index: 100;
 }
@@ -409,5 +409,9 @@ aside.red {
     .container {
         min-width: 45%;
         min-height: 45vh;
+    }
+
+    aside {
+        width: 45%;
     }
 }
