--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@ body {
 }
 
 .container {
+    position: relative;
     min-width: 95%;
     min-height: 95vh;
     background-color: #e5ffff;
@@ -34,6 +35,89 @@ body {
     overflow-x: hidden;
     margin-top: 30px;
 }
+
+
+form.check {
+    position: absolute;
+    top: 30px;
+    left: 50px;
+    transform: translate(-50%, -50%);
+    width: 80px;
+    height: 40px;
+    background-color: rgb(226, 176, 176);
+    border-radius: 80px;
+    z-index: 100;
+}
+
+form.check input {
+    position: relative;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 50px;
+    height: 50px;
+    background-color: rgb(226, 176, 176);
+    border-radius: 80px;
+    width: 100%;
+    height: 100%;
+    appearance: none;
+    transition: 0.5s;
+    cursor: pointer;
+    z-index: 100;
+
+}
+
+form.check input:checked {
+    background-color: rgb(144, 177, 144);
+}
+
+form.check input:checked~input#word {
+    display: none;
+}
+
+form.check input:checked~span {
+    left: 55%;
+}
+
+form.check input:checked form.check input:checked~span::before {
+    background-color: rgb(144, 177, 144);
+}
+
+form.check input:checked~span i::before {
+    background-color: rgb(144, 177, 144);
+}
+
+form.check input:checked~span::after {
+    background-color: rgb(144, 177, 144);
+    border-top-left-radius: 50%;
+    border-top-right-radius: 50%;
+    height: 25px;
+    z-index: 100;
+}
+
+
+form.check span {
+    position: absolute;
+    top: 50%;
+    left: 5px;
+    width: 30px;
+    height: 75%;
+    transform: translateY(-50%);
+    border-radius: 80px;
+    background-color: white;
+    transition: .5s;
+    z-index: 100;
+}
+
+form.check span p {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    font-size: 2rem;
+    transform: translate(-50%, -50%);
+}
+
+
 
 form {
     display: flex;
@@ -102,6 +186,21 @@ form {
     font-size: 4rem;
     padding: 20px;
     text-align: center;
+}
+
+form.multi input {
+    display: none;
+    padding: 5px;
+    font-size: 1.5rem;
+    margin: 5px;
+    border: .5px solid rgba(0, 0, 0, 0.5);
+    outline: none;
+    border-radius: 10px;
+    width: 150px;
+}
+
+form.multi input.show {
+    display: block;
 }
 
 .image {
