--- a/style.css
+++ b/style.css
@@ -347,7 +347,7 @@ form.multi input.show {
 
 aside {
     width: 80%;
-    height: 10%;
+    height: 15%;
     position: absolute;
     top: 50%;
     left: 50%;
@@ -367,8 +367,9 @@ aside .imgAs {
 aside h2 {
     text-align: center;
     padding: 30px;
-    color: rgba(0, 0, 0, 0.5);
+    color: rgba(0, 0, 0, 0.8);
     font-size: 2rem;
+    line-height: 30px;
     text-transform: uppercase;
 }
 
@@ -378,8 +379,12 @@ aside.green {
     transform: translate(-50%, -50%);
 }
 
+aside.green h2 {
+    line-height: 80px;
+}
+
 aside.red {
-    background-color: rgb(184, 95, 95, .5);
+    background-color: rgb(184, 95, 95, .8);
     transform: translate(-50%, -50%);
 }
 
